# tmux-agent-sidebar

./: AGENTS.md  Cargo.toml  agent-sidebar.conf
.claude-plugin/: plugin.json
.opencode/plugins/: tmux-agent-sidebar.js
docs/: TODO-background-shell-detection.md  state-management.md
docs/superpowers/plans/: 2026-04-19-pet-page.md
docs/superpowers/specs/: 2026-04-19-pet-page-design.md
fixtures/scenarios/common/: _lib.sh
fixtures/scenarios/pet-idle/: scenario.sh
fixtures/scenarios/pet-walking/: scenario.sh
fixtures/scenarios/pet-working/: scenario.sh
scripts/: build-assets.sh
src/: app.rs  desktop_notification.rs  group.rs  state.rs  tmux.rs  worktree.rs
src/app/: setup.rs
src/cli/: mod.rs  toggle.rs
src/cli/hook/: activity.rs  notifications.rs
src/cli/hook/context/: labels.rs  location.rs  meta.rs  pending.rs
src/cli/hook/handlers/: attention.rs  run.rs  session.rs  subagent.rs  worktree.rs
src/state/: pet.rs  refresh.rs
src/tmux/: options.rs  query.rs
src/ui/: colors.rs  mod.rs  pet.rs
src/worktree/: config.rs  env.rs  flow.rs  markers.rs  slug.rs
tests/: bottom_tests.rs  color_tests.rs  worktree_tests.rs
website/: astro.config.mjs  package-lock.json  package.json
website/src/content/docs/features/: pet.mdx  worktree.mdx
website/src/content/docs/reference/: tmux-options.md
